change chaquopy by my libraires https://github.com/algorythmice/turboself-api and https://github.com/algorythmice/pronotekt

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,8 +39,8 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
-pronotekt = { module = "com.github.polip3000:pronotekt", version.ref = "pronotekt" }
-turboself-api = { module = "com.github.polip3000:turboself-api", version.ref = "turboselfAPI"}
+pronotekt = { module = "com.github.algorythmice:pronotekt", version.ref = "pronotekt" }
+turboself-api = { module = "com.github.algorythmice:turboself-api", version.ref = "turboselfAPI"}
 zxing-core = { module = "com.google.zxing:core", version.ref = "zxing" }
 ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
 ktor-client-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
